--- a/index.html
+++ b/index.html
@@ -35,32 +35,34 @@
    <!-- header section start -->
    <div class="header_section">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-         <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
+         <!-- LOGO SACS -->
+         <div class="logo"><a href="index.html"><img src="images/logoSACS.png"></a></div>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
          </button>
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home</a>
+                  <a class="nav-link" href="index.html">Inicio</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="health.html">Health</a>
+                  <a class="nav-link" href="health.html">Casos</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="medicine.html">Medicine</a>
+                  <a class="nav-link" href="medicine.html">Estadisticas</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="news.html">News</a>
+                  <a class="nav-link" href="news.html">Nuevo modulo </a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="client.html">Client</a>
+                  <a class="nav-link" href="client.html">Nuevo modulo</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
+                  <a class="nav-link" href="contact.html">Contactanos</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#"><img src="images/search-icon.png"></a>
+                  <!-- BUSCADOR -->
+                  <!-- <a class="nav-link" href="#"><img src="images/search-icon.png"></a> -->
                </li>
             </ul>
          </div>
@@ -75,7 +77,7 @@
                      <div class="row">
                         <div class="col-md-6">
                            <h1 class="banner_taital">Health <br><span style="color: #151515;">Care</span></h1>
-                           <p class="banner_text">There are many variations of passages of Lorem Ipsum</p>
+                           <p class="banner_text">Cuidamos de ti, porque tu salud es nuestra prioridad</p>
                            <div class="btn_main">
                               <div class="more_bt"><a href="#">Contact Now</a></div>
                               <div class="contact_bt"><a href="#">Get A Quote</a></div>
@@ -94,7 +96,7 @@
                      <div class="row">
                         <div class="col-md-6">
                            <h1 class="banner_taital">Health <br><span style="color: #151515;">Care</span></h1>
-                           <p class="banner_text">There are many variations of passages of Lorem Ipsum</p>
+                           <p class="banner_text">Cuidamos de ti, porque tu salud es nuestra prioridad</p>
                            <div class="btn_main">
                               <div class="more_bt"><a href="#">Contact Now</a></div>
                               <div class="contact_bt"><a href="#">Get A Quote</a></div>
@@ -113,7 +115,7 @@
                      <div class="row">
                         <div class="col-md-6">
                            <h1 class="banner_taital">Health <br><span style="color: #151515;">Care</span></h1>
-                           <p class="banner_text">There are many variations of passages of Lorem Ipsum</p>
+                           <p class="banner_text">Cuidamos de ti, porque tu salud es nuestra prioridad</p>
                            <div class="btn_main">
                               <div class="more_bt"><a href="#">Contact Now</a></div>
                               <div class="contact_bt"><a href="#">Get A Quote</a></div>
@@ -139,8 +141,8 @@
    <!-- health section start -->
    <div class="health_section layout_padding">
       <div class="container">
-         <h1 class="health_taital">Best Of Health care for you</h1>
-         <p class="health_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis</p>
+         <h1 class="health_taital">Lo mejor del cuidado de la salud para ti</h1>
+         <p class="health_text">"En 'Lo mejor del cuidado de la salud para ti', nuestro compromiso es brindarte atención de calidad y bienestar en cada paso de tu camino."</p>
          <div class="health_section layout_padding">
             <div class="row">
                <div class="col-sm-7">
