se corrigen las rutas de los todos los menus y agrega los botones del crud, se crea el controlador, el modelo y la vista hace falta corregir la oopcion de subir los datos creados.

--- a/html/menu.html
+++ b/html/menu.html
@@ -36,7 +36,7 @@
    <div class="header_section">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
          <!-- LOGO SACS -->
-         <div class="logo"><a href="index.html"><img src="/images/logoSACS.png"></a></div>
+         <!-- <div class="logo"><a href="index.html"><img src="/images/logoSACS.png"></a></div> -->
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
          </button>
@@ -45,28 +45,27 @@
                <li class="nav-item active">
                   <a class="nav-link" href="/logout.php">Cerrar sesión</a>
                </li>
-               
                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Inicio</a>
+                  <a class="nav-link" href="menu.html">Inicio</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="health.html">Casos</a>
+                  <a class="nav-link" href="casos.html">Casos</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="medicine.html">Estadisticas</a>
+                  <a class="nav-link" href="estadistica.html">Estadisticas</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="news.html">Nuevo modulo </a>
+                  <a class="nav-link" href="news.html">Nuevo modulo</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="client.html">Nuevo modulo</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contactanos</a>
+                  <a class="nav-link" href="contactanos.html">Contactanos</a>
                </li>
                <li class="nav-item">
                   <!-- BUSCADOR -->
-                  <!-- <a class="nav-link" href="#"><img src="images/search-icon.png"></a> -->
+                  <a class="nav-link" href="#"><img src="/images/search-icon.png"></a>
                </li>
             </ul>
          </div>
