--- a/html/client.html
+++ b/html/client.html
@@ -13,52 +13,54 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- bootstrap css -->
-      <link rel="stylesheet" href="css/bootstrap.min.css">
+      <link rel="stylesheet" href="/css/bootstrap.min.css">
       <!-- style css -->
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="/css/style.css">
       <!-- Responsive-->
-      <link rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="/css/responsive.css">
       <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="/images/fevicon.png" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+      <link rel="stylesheet" href="/css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <!-- owl stylesheets --> 
-      <link rel="stylesheet" href="css/owl.carousel.min.css">
-      <link rel="stylesheet" href="css/owl.theme.default.min.css">
+      <link rel="stylesheet" href="/css/owl.carousel.min.css">
+      <link rel="stylesheet" href="/css/owl.theme.default.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
    </head>
    <body>
       <!-- header section start -->
       <div class="header_section">
          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
+            <!-- <div class="logo"><a href="index.html"><img src="/images/logo.png"></a></div> -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                     <a class="nav-link" href="index.html">Home</a>
+                     <a class="nav-link" href="/logout.php">Cerrar sesión</a>
+               </li>
+                     <a class="nav-link" href="menu.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="health.html">Health</a>
+                     <a class="nav-link" href="casos.html">Casos</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="medicine.html">Medicine</a>
+                     <a class="nav-link" href="estadistica.html">Estadisticas</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="news.html">News</a>
+                     <a class="nav-link" href="news.html">Nuevo modulo</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link active" href="client.html">Client</a>
+                     <a class="nav-link active" href="client.html">Nuevo modulo</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="contact.html">Contact Us</a>
+                     <a class="nav-link" href="contactanos.html">Contactanos </a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#"><img src="images/search-icon.png"></a>
+                     <a class="nav-link" href="#"><img src="/images/search-icon.png"></a>
                   </li>
                </ul>
             </div>
@@ -75,12 +77,12 @@
                      <p class="client_text">It is a long established fact that a reader will be distracted </p>
                      <div class="client_section_2">
                         <div class="client_left">
-                           <div><img src="images/client-img.png" class="client_img"></div>
+                           <div><img src="/images/client-img.png" class="client_img"></div>
                         </div>
                         <div class="client_right">
                            <h3 class="distracted_text">Distracted by</h3>
                            <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
-                           <div class="quote_icon"><img src="images/quote-icon.png"></div>
+                           <div class="quote_icon"><img src="/images/quote-icon.png"></div>
                         </div>
                      </div>
                   </div>
@@ -91,12 +93,12 @@
                      <p class="client_text">It is a long established fact that a reader will be distracted </p>
                      <div class="client_section_2">
                         <div class="client_left">
-                           <div><img src="images/client-img.png" class="client_img"></div>
+                           <div><img src="/images/client-img.png" class="client_img"></div>
                         </div>
                         <div class="client_right">
                            <h3 class="distracted_text">Distracted by</h3>
                            <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
-                           <div class="quote_icon"><img src="images/quote-icon.png"></div>
+                           <div class="quote_icon"><img src="/images/quote-icon.png"></div>
                         </div>
                      </div>
                   </div>
@@ -107,12 +109,12 @@
                      <p class="client_text">It is a long established fact that a reader will be distracted </p>
                      <div class="client_section_2">
                         <div class="client_left">
-                           <div><img src="images/client-img.png" class="client_img"></div>
+                           <div><img src="/images/client-img.png" class="client_img"></div>
                         </div>
                         <div class="client_right">
                            <h3 class="distracted_text">Distracted by</h3>
                            <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
-                           <div class="quote_icon"><img src="images/quote-icon.png"></div>
+                           <div class="quote_icon"><img src="/images/quote-icon.png"></div>
                         </div>
                      </div>
                   </div>
@@ -132,11 +134,11 @@
          <div class="container">
             <div class="row">
                <div class="col-lg-3 col-sm-6">
-                  <div class="footer_logo"><a href="index.html"><img src="images/footer-logo.png"></a></div>
+                  <div class="footer_logo"><a href="index.html"><img src="/images/footer-logo.png"></a></div>
                   <h1 class="adderss_text">Contact Us</h1>
-                  <div class="map_icon"><img src="images/map-icon.png"><span class="paddlin_left_0">Page when looking at its</span></div>
-                  <div class="map_icon"><img src="images/call-icon.png"><span class="paddlin_left_0">+7586656566</span></div>
-                  <div class="map_icon"><img src="images/mail-icon.png"><span class="paddlin_left_0">volim@gmail.com</span></div>
+                  <div class="map_icon"><img src="/images/map-icon.png"><span class="paddlin_left_0">Page when looking at its</span></div>
+                  <div class="map_icon"><img src="/images/call-icon.png"><span class="paddlin_left_0">+7586656566</span></div>
+                  <div class="map_icon"><img src="/images/mail-icon.png"><span class="paddlin_left_0">volim@gmail.com</span></div>
                </div>
                <div class="col-lg-3 col-sm-6">
                   <h1 class="adderss_text">Doctors</h1>
@@ -152,10 +154,10 @@
                   <div class="subscribe_bt"><a href="#">Subscribe</a></div>
                   <div class="social_icon">
                      <ul>
-                        <li><a href="#"><img src="images/fb-icon.png"></a></li>
-                        <li><a href="#"><img src="images/twitter-icon.png"></a></li>
-                        <li><a href="#"><img src="images/linkedin-icon.png"></a></li>
-                        <li><a href="#"><img src="images/instagram-icon.png"></a></li>
+                        <li><a href="#"><img src="/images/fb-icon.png"></a></li>
+                        <li><a href="#"><img src="/images/twitter-icon.png"></a></li>
+                        <li><a href="#"><img src="/images/linkedin-icon.png"></a></li>
+                        <li><a href="#"><img src="/images/instagram-icon.png"></a></li>
                      </ul>
                   </div>
                </div>
@@ -171,16 +173,16 @@
       </div>
       <!-- copyright section end -->
       <!-- Javascript files-->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/popper.min.js"></script>
-      <script src="js/bootstrap.bundle.min.js"></script>
-      <script src="js/jquery-3.0.0.min.js"></script>
-      <script src="js/plugin.js"></script>
+      <script src="/js/jquery.min.js"></script>
+      <script src="/js/popper.min.js"></script>
+      <script src="/js/bootstrap.bundle.min.js"></script>
+      <script src="/js/jquery-3.0.0.min.js"></script>
+      <script src="/js/plugin.js"></script>
       <!-- sidebar -->
-      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="js/custom.js"></script>
+      <script src="/js/jquery.mCustomScrollbar.concat.min.js"></script>
+      <script src="/js/custom.js"></script>
       <!-- javascript --> 
-      <script src="js/owl.carousel.js"></script>
+      <script src="/js/owl.carousel.js"></script>
       <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
    </body>
 </html>
